--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "eyed3>=0.9.8",
     "httpx>=0.28.1",
     "python-slugify>=8.0.4",
     "slugify>=0.0.1",
